--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello word
+<!doctype html>
+<htlm>
+      <head>
+        <title>Jahleel</title>
+        
+        <head>
+          <body>
+            Welcome! This is my website, which was created as an assignment for my seminar class.
+            I am a first year studet at the university at buffalo and my major is computer engineering.
+            
+          </body>
+<html>
+
+
