--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
                 <h1>Hello</h1>
             Welcome! This is my website, which was created as an assignment for my seminar class.
             I am a first year studet at the university at buffalo and my major is computer engineering.
+                
+                1. Things
+                2. More things
+                3. Even more things.
+                4. Even more than even more things.
             
           </body>
 <html>
