--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         </head>
           <body>
                 <h1>Hello</h1>
-            Welcome! This is my website, which was created as an assignment for my seminar class.
-            I am a first year student at the university at buffalo and my major is computer engineering.
+            <p>Welcome! This is my website, which was created as an assignment for my seminar class.
+            I am a first year student at the university at buffalo and my major is computer engineering.</p>
                 
                 1. One thing
                 2. More things
