--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="/w3images/avatar_hat.jpg" style="width:100%" alt="Avatar">
+          <img src=https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwig7bvJg_nQAhXE4iYKHXZ4DtsQjRwIBw&url=http%3A%2F%2Fwww.kentuckystatepolice.org%2Fposts%2Fpost15_Most_Wanted%2Fpost15_mostwanted.html&psig=AFQjCNFTqeLut8H6mklLC3cjbWda3V_fUQ&ust=1481988511533282 style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2>Jahleel Primus</h2>
           </div>
@@ -38,7 +38,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Profficient in Java</p>
           <div class="w3-progress-container w3-round-xlarge w3-small">
             <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:90%">
-              <div class="w3-center w3-text-white">90%</div>
+              <div class="w3-center w3-text-white"></div>
             </div>
           
           <br>
