--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src=https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwig7bvJg_nQAhXE4iYKHXZ4DtsQjRwIBw&url=http%3A%2F%2Fwww.kentuckystatepolice.org%2Fposts%2Fpost15_Most_Wanted%2Fpost15_mostwanted.html&psig=AFQjCNFTqeLut8H6mklLC3cjbWda3V_fUQ&ust=1481988511533282 style="width:100%" alt="Avatar">
+          <img src= "http://app1.pinalcountyaz.gov/ALERT_viewer/metadata/images/No_available_image.gif" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2>Jahleel Primus</h2>
           </div>
         </div>
-        <div class="w3-container">
+        <div class="w3-container">"
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Computer Engineering Student</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Buffalo, NY</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>jahleelp@buffalo.edu</p>
