--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src= "http://app1.pinalcountyaz.gov/ALERT_viewer/metadata/images/No_available_image.gif" style="width:50%" alt="Avatar">
+          <img src= "https://lehighcee1.files.wordpress.com/2014/02/engineering-school-meme-and-lol.jpg" style="width:50%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2>Jahleel Primus</h2>
           </div>
         </div>
-        <div class="w3-container">"
+        <div class="w3-container">
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Computer Engineering Student</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Buffalo, NY</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>jahleelp@buffalo.edu</p>
@@ -54,9 +54,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>(MORE TO COME.)</b></h5>
           
         <div class="w3-container">
-          <h5 class="w3-opacity"><b>University at BUffalo</b></h5>
+          <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>School History</h2>
+          <h5 class="w3-opacity"><b>University at Buffalo</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2016-present</h6>
-          <p> In pursuit of a Bachelor Degree in computer engineering</p><br>
+          <p> In pursuit of a Bachelor Degree in computer engineering.</p><br>
         </div>
       </div>
 
